fixed bug where comment section width would overflow

--- a/frontend/src/components/Post/Post.scss
+++ b/frontend/src/components/Post/Post.scss
@@ -21,7 +21,7 @@
 		word-wrap: break-word;
 		position: relative;
 		background: black;
-		min-width: 300px;
+		width: 300px;
 
 		.posts-comment {
 			position: absolute;
